# KittehPlayer

./: .gitignore  .travis.yml  CMakeLists.txt  KittehPlayer.desktop  KittehPlayer.pro  Makefile  README.md
scripts/: build-mpv.sh  ci-linux64.sh  makeappimage.sh  upload.sh
src/: config.h  fileopendialog.cpp  filesavedialog.cpp  main.cpp  mpvobject.cpp  mpvobject.h  setenv_mingw.hpp
src/qml/: CustomComboBox.qml  CustomMenuItem.qml  CustomMenuItem.qmlc  Translator.qml  codes.js  codes.jsc  main.qml  main.qmlc  qml.qrc  translations.js
src/qml/fonts/: README.md
src/qml/icons/: README.md
